--- a/pom.xml
+++ b/pom.xml
@@ -116,21 +116,21 @@
 		</dependency>
 
 		<!-- jsf by mojarra -->
-		<!-- <dependency> <groupId>com.sun.faces</groupId> <artifactId>jsf-api</artifactId> 
-			<version>2.2.5</version> </dependency> <dependency> <groupId>com.sun.faces</groupId> 
-			<artifactId>jsf-impl</artifactId> <version>2.2.5</version> </dependency> -->
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>2.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.2.5</version>
+		</dependency>
 
 		<!-- jsf by myfaces -->
-		<dependency>
-			<groupId>org.apache.myfaces.core</groupId>
-			<artifactId>myfaces-api</artifactId>
-			<version>2.2.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.myfaces.core</groupId>
-			<artifactId>myfaces-impl</artifactId>
-			<version>2.2.2</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.apache.myfaces.core</groupId> <artifactId>myfaces-api</artifactId> 
+			<version>2.2.2</version> </dependency> <dependency> <groupId>org.apache.myfaces.core</groupId> 
+			<artifactId>myfaces-impl</artifactId> <version>2.2.2</version> </dependency> -->
 
 		<!-- Primefaces -->
 
