--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,7 @@
 
 
 	<!-- Processes application requests -->
+
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -55,9 +56,41 @@
 		<param-value>cs5412.project.distributed_file_system</param-value>
 	</context-param>
 
+	<context-param>
+		<param-name>primefaces.UPLOADER</param-name>
+		<param-value>auto</param-value>
+	</context-param>
+
+
 	<welcome-file-list>
 		<welcome-file>views/prettyFaceTest/helloworld.xhtml</welcome-file>
 	</welcome-file-list>
+
+	<filter>
+	<filter-name>PrimeFaces FileUpload Filter</filter-name>
+	<filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+	<init-param>
+	<param-name>thresholdSize</param-name>
+	<param-value>51200</param-value>
+	</init-param>
+	<init-param>
+	<param-name>uploadDirectory</param-name>
+	<param-value>Users/primefaces/temp</param-value>
+	</init-param>
+	</filter>
+	<filter-mapping>
+	<filter-name>PrimeFaces FileUpload Filter</filter-name>
+	<servlet-name>Faces Servlet</servlet-name>
+	</filter-mapping>
+
+	<!-- <filter>
+		<filter-name>MyFacesExtensionsFilter</filter-name>
+		<filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>MyFacesExtensionsFilter</filter-name>
+		<servlet-name>Faces Servlet</servlet-name>
+	</filter-mapping> -->
 
 
 
